# AntimatBot

./: .gitignore  LICENSE  Spacefile  main.py  predeploy.sh  pyproject.toml  requirements.txt  setup.cfg
BotMicro/: requirements.txt
BotMicro/analysis/: __init__.py  checking.py  normilize.py
BotMicro/bot/: factory.py  messages.py
BotMicro/bot/callbacks/: event_message.py
BotMicro/bot/handlers/: __init__.py
BotMicro/bot/handlers/groups/: __init__.py  group_message.py  new_group.py  new_member.py
BotMicro/bot/handlers/private/: __init__.py  edit_words.py  event_message.py  ignored_users.py  list_words.py  profanity_filter.py  start.py
BotMicro/bot/middlewares/: active_group.py  logging.py
BotMicro/bot/utils/: chat_queries.py  events.py  group_utils.py  message_delete_event.py  spread.py
BotMicro/models/: dictionaries.py  events.py  member.py
BotMicro/utils/: logging.py
BotMicro/vartrie/: __init__.py  vartrie.py
BotMicro/web/routers/: __init__.py  develop.py
antispambot/: .gitignore  main.py  vartrie.py
antispambot/analysis/: checking.py  normilize.py
antispambot/bot/: factory.py  messages.py
antispambot/bot/handlers/: __init__.py  error.py
antispambot/bot/handlers/groups/: __init__.py  group_message.py  (+2 more)
antispambot/bot/middlewares/: active_group.py  logging.py
antispambot/bot/states/: private.py
antispambot/bot/utils/: chat_queries.py  events.py  group_utils.py  message.py  spread.py
antispambot/models/: __init__.py  chat.py  dictionary.py  event.py  group.py  history.py  member.py
antispambot/storage/: base.py  storages.py
(+9 files in other folders)
