[tool.poetry]
name = "antispambot"
version = "0.1.0"
authors = ["butvinm <butvin.mihail@yandex.ru>"]
description = "Telegram bot for spam protection"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
aiogram = "3.13.1"
fastapi = { version = "0.115.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
